proper working swagger yo
