# controllers/watch.go
@@ -8,6 +8,15 @@ import (
 
 type WatchController struct{}
 
+// WatchController godoc
+// @Summary Perform Checkin to timewatch.co.il
+// @Description get request to perform checkin
+// @ID checkin
+// @Produce json
+// @Tags Watcher
+// @Param employee_id path string true "Employee ID"
+// @Param password path string true "Employee Password"
+// @Router /v1/watcher/checkin/{employee_id}/{password} [get]
 func (h WatchController) CheckIn(c *gin.Context) {
 	company := c.Query("company")
 	user := c.Param("username")
@@ -20,6 +29,16 @@ func (h WatchController) CheckIn(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"success": true, "operation": "checkin", "user": user})
 }
 
+// WatchController godoc
+// @Summary Perform Checkout to timewatch.co.il
+// @GroupName baba
+// @Description get request to perform checkout
+// @ID checkout
+// @Tags Watcher
+// @Produce json
+// @Param employee_id path string true "Employee ID"
+// @Param password path string true "Employee Password"
+// @Router /v1/watcher/checkout/{employee_id}/{password} [get]
 func (h WatchController) CheckOut(c *gin.Context) {
 	company := c.Query("company")
 	user := c.Param("username")
