# docs/swagger/swagger.json
@@ -10,17 +10,62 @@
     "host": "{{.Host}}",
     "basePath": "{{.BasePath}}",
     "paths": {
-        "/health": {
+        "/v1/watcher/checkin/{employee_id}/{password}": {
             "get": {
-                "description": "get health json",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "get request to perform checkin",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Return Health Status",
-                "operationId": "get-health"
+                "tags": [
+                    "Watcher"
+                ],
+                "summary": "Perform Checkin to timewatch.co.il",
+                "operationId": "checkin",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Employee ID",
+                        "name": "employee_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Employee Password",
+                        "name": "password",
+                        "in": "path",
+                        "required": true
+                    }
+                ]
+            }
+        },
+        "/v1/watcher/checkout/{employee_id}/{password}": {
+            "get": {
+                "description": "get request to perform checkout",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Watcher"
+                ],
+                "summary": "Perform Checkout to timewatch.co.il",
+                "operationId": "checkout",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Employee ID",
+                        "name": "employee_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Employee Password",
+                        "name": "password",
+                        "in": "path",
+                        "required": true
+                    }
+                ]
             }
         }
     }
